<resources>
    <string name="app_name">AndroidBase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aceptar">Aceptar</string>
    <string name="tittle_message">Tittle message</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="body_message">Body message</string>
    <string name="error_service">Servicio no disponible, intente más tarde.</string>
    <string name="verifica_conexion">Verifica tu conexion de internet</string>
    <string name="users">Users</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="n_mero">Número:</string>
    <string name="id">Id:</string>
    <string name="empty">***************</string>
    <string name="t_tulo">Título</string>
    <string name="detalle">DETALLE</string>
    <string name="hola_mi_nombre_es">Hola, mi nombre es:</string>
    <string name="mi_correo_electr_nico_es">Mi correo electrónico es:</string>
    <string name="mi_cumplea_os_es">Mi cumpleaños es:</string>
    <string name="mi_domicilio_es">Mi domicilio es:</string>
    <string name="mi_telefono_es">Mi telefono es :</string>
    <string name="mi_contrase_a_es">Mi contraseña es:</string>
</resources>